Menu Text Changes

--- a/src/main/java/co/uk/abondservices/gcconvert/GCConvert.form
+++ b/src/main/java/co/uk/abondservices/gcconvert/GCConvert.form
@@ -29,7 +29,7 @@
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
                   <KeyStroke key="Ctrl+E"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Export Current..."/>
+                <Property name="text" type="java.lang.String" value="Export Current"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuExportActionPerformed"/>
@@ -51,7 +51,7 @@
                 <Property name="accelerator" type="javax.swing.KeyStroke" editor="org.netbeans.modules.form.editors.KeyStrokeEditor">
                   <KeyStroke key="Ctrl+S"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Save LIRC.CONF File..."/>
+                <Property name="text" type="java.lang.String" value="Save LIRC.CONF File"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="mnuSaveLircConfActionPerformed"/>
